# nftables

./: README.md  nftables  pyproject.toml  requirements.txt
src/nft_viewer/: __init__.py  __main__.py  cli.py  wrapper.py
